--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,66 +1,73 @@
-name: Deploy Development
+name: Deploy Firebase Hosting (Dev)
+
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main # Trigger dev deployment on push/merge to main branch
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
 
-    env:
-      VITE_PUBLIC_APIKEY: ${{ vars.DEV_VITE_PUBLIC_APIKEY }}
-      VITE_PUBLIC_AUTHDOMAIN: ${{ vars.DEV_VITE_PUBLIC_AUTHDOMAIN }}
-      VITE_PUBLIC_PROJECTID: ${{ vars.DEV_VITE_PUBLIC_PROJECTID }}
-      VITE_PUBLIC_STORAGEBUCKET: ${{ vars.DEV_VITE_PUBLIC_STORAGEBUCKET }}
-      VITE_PUBLIC_MESSAGINGSENDERID: ${{ vars.DEV_VITE_PUBLIC_MESSAGINGSENDERID }}
-      VITE_PUBLIC_APPID: ${{ vars.DEV_VITE_PUBLIC_APPID }}
-      VITE_PUBLIC_MEASUREMENTID: ${{ vars.DEV_VITE_PUBLIC_MEASUREMENTID }}
-
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup node
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version-file: "package.json"
           cache: npm
           cache-dependency-path: "**/package-lock.json"
 
-      - name: Install
+      - name: Install Dependencies
         run: npm ci
-        working-directory: ./
 
-      - name: Build
+      - name: Build Project
+        # If needed, pass DEV-specific env vars to the build
+        # env:
+        #  VITE_APP_ENV: 'development'
+        #  VITE_FIREBASE_API_KEY: ${{ secrets.DEV_FIREBASE_API_KEY }} # If build needs API key
         run: npm run build
-        working-directory: ./
 
-      - name: Archive Development Artifact
+      - name: Archive Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: dist-dev
           path: dist
 
   deploy:
-    name: Deploy
+    name: Deploy (Development)
     needs: build
     runs-on: ubuntu-latest
+    environment:
+      name: development
+      # url: <Your Dev Site URL> # Optional: Add dev site URL if known
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
-          name: dist
+          name: dist-dev
           path: dist
 
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@v13.28.0
+      - name: Deploy to Firebase Hosting (Development)
+        id: deploy_firebase_dev
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          args: deploy --only hosting:jsw-dev
-        env:
-          GCP_SA_KEY: ${{ secrets.DEV_FIREBASE_SERVICE_ACCOUNT }}
-          PROJECT_ID: jsninja-dev
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          # Ensure you create this secret in GitHub Settings > Secrets > Actions
+          # It should contain the JSON service account key for your DEV Firebase project.
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV }}" # Example name, choose your own
+          channelId: live # Deploy to the live channel of the DEV project
+          projectId: "your-dev-project-id" # Optional: Explicitly set DEV project ID, or let Service Account determine it.
+
+      # Optional: Output deployment URL
+      - name: Deployment URL
+        if: steps.deploy_firebase_dev.outputs.details_url
+        run: echo "Deployed DEV to ${{ steps.deploy_firebase_dev.outputs.details_url }}"
