--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -65,7 +65,7 @@ jobs:
           # It should contain the JSON service account key for your DEV Firebase project.
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV }}" # Example name, choose your own
           channelId: live # Deploy to the live channel of the DEV project
-          projectId: "your-dev-project-id" # Optional: Explicitly set DEV project ID, or let Service Account determine it.
+          projectId: "your-actual-dev-project-id" # Optional: Explicitly set DEV project ID, or let Service Account determine it.
 
       # Optional: Output deployment URL
       - name: Deployment URL
