--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -25,6 +25,15 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Debug Environment
+        run: |
+          echo "Current working directory:"
+          pwd
+          echo "\nRepository contents:"
+          ls -la
+          echo "\nChecking for .env file:"
+          ls -la .env* || true
+
       - name: Build Project
         env:
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
@@ -34,7 +43,15 @@ jobs:
           VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}
           VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID }}
           VITE_FIREBASE_MEASUREMENT_ID: ${{ secrets.VITE_FIREBASE_MEASUREMENT_ID }}
-        run: npm run build
+        run: |
+          echo "Environment variables present:"
+          env | grep -i firebase || true
+          echo "\nCreating temporary env file for debugging:"
+          env | grep VITE_ > .env.build
+          echo "\nBuilding project:"
+          npm run build
+          echo "\nChecking build output:"
+          ls -la dist/
 
       - name: Archive Build Artifact
         uses: actions/upload-artifact@v4
