--- a/package.json
+++ b/package.json
@@ -1,113 +1,47 @@
 {
-  "name": "firebase-react-ts-vite-template",
-  "version": "1.0.0",
+  "name": "static-firebase-react-template",
+  "version": "0.1.0",
+  "description": "Minimal Firebase + React + Vite starter template with built-in demo credentials and multi-env deploy scripts.",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "firebase serve",
+    "emulators": "firebase emulators:start",
     "lint": "eslint src --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
     "type:check": "tsc --noEmit",
     "postinstall": "husky",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "deploy:dev": "npm run build && firebase deploy --only hosting:dev -P dev",
+    "deploy:prod": "npm run build && firebase deploy --only hosting:prod -P prod"
   },
   "dependencies": {
-    "@babel/core": "^7.24.3",
-    "@babel/standalone": "^7.26.4",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^6.1.10",
-    "@mui/lab": "^6.0.0-beta.18",
     "@mui/material": "^6.4.0",
+    "@mui/icons-material": "^6.1.10",
     "@mui/system": "^5.16.1",
-    "@mui/x-tree-view": "^7.23.0",
-    "@reduxjs/toolkit": "^2.2.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/lodash": "^4.17.0",
-    "@types/node": "^20.11.25",
-    "@types/prettier": "^3.0.0",
-    "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "aws-sdk": "^2.1574.0",
-    "buffer": "^6.0.3",
-    "chart.js": "^4.4.7",
-    "chartjs-plugin-datalabels": "^2.2.0",
-    "dayjs": "^1.11.13",
-    "diff": "^5.2.0",
-    "diff-match-patch": "^1.0.5",
-    "esbuild-wasm": "^0.24.2",
     "firebase": "^11.1.0",
-    "gapi-script": "^1.2.0",
-    "js-base64": "^3.7.7",
-    "lodash": "^4.17.21",
-    "marked": "^15.0.6",
-    "mobx": "^6.12.0",
-    "mobx-react": "^9.1.0",
-    "moment-timezone": "^0.5.46",
-    "monaco-editor-webpack-plugin": "^7.1.0",
-    "openai": "^4.77.0",
-    "path": "^0.12.7",
-    "prettier": "3.2.5",
-    "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-chartjs-2": "^5.3.0",
-    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.1.1",
-    "react-password-checklist": "^1.8.0",
     "react-router-dom": "^6.22.3",
-    "react-swipeable": "^7.0.2",
-    "react-toastify": "^10.0.5",
-    "relaxed-json": "^1.0.3",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^8.56.0",
-    "@types/babel__standalone": "^7.1.9",
-    "@types/diff": "^5.0.9",
-    "@types/diff-match-patch": "^1.0.36",
-    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
-    "@types/path-browserify": "^1.0.3",
     "@types/react": "^18.2.64",
-    "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.21",
-    "@types/relaxed-json": "^1.0.4",
-    "babel-jest": "^29.7.0",
-    "chalk": "^5.3.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-minimizer-webpack-plugin": "^3.4.0",
-    "esbuild": "^0.24.2",
-    "eslint": "^8.56.0",
-    "husky": "^9.0.11",
-    "jest": "^29.7.0",
+    "@types/node": "^20.11.25",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "path-browserify": "1.0.1",
-    "postcss-loader": "^8.1.1",
-    "terser-webpack-plugin": "^5.2.5",
-    "ts-jest": "^29.2.6",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.15.0",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "vite": "^5.0.8",
-    "webpack-bundle-analyzer": "^4.10.1"
+    "typescript-eslint": "^7.15.0"
   },
   "engines": {
     "node": ">=18.18.0"
