--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -87,16 +87,17 @@ jobs:
           name: dist-prod
           path: dist
 
-      - name: Deploy to Firebase Hosting (Production)
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
+      - name: Deploy to Firebase (Production)
         id: deploy_firebase_prod
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          # Ensure you create this secret in GitHub Settings > Secrets > Actions
-          # It should contain the JSON service account key for your PROD Firebase project.
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_PROD }}" # Ensure this secret is created in the 'production' environment settings
-          channelId: live # Deploy to live channel for production
-          projectId: "static-website-template-ee8ac" # Set the confirmed PROD project ID.
+        run: |
+          # Deploy Firestore Rules
+          firebase deploy --only firestore:rules --project static-website-template-ee8ac --token "${{ secrets.FIREBASE_SERVICE_ACCOUNT_PROD }}"
+          
+          # Deploy Hosting to live channel
+          firebase hosting:deploy --project static-website-template-ee8ac --token "${{ secrets.FIREBASE_SERVICE_ACCOUNT_PROD }}"
 
       - name: Deployment URL
         if: steps.deploy_firebase_prod.outputs.details_url
