--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,12 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+!.env
+!.env.local
+!.env.development.local
+!.env.test.local
+!.env.production.local
+!.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
